# docs/swagger.json
@@ -71,7 +71,7 @@
                 }
             }
         },
-        "/labels/{id}": {
+        "/labels/{label_id}": {
             "get": {
                 "description": "Get label.",
                 "tags": [
@@ -89,7 +89,7 @@
                     {
                         "type": "string",
                         "description": "Label ID",
-                        "name": "id",
+                        "name": "label_id",
                         "in": "path",
                         "required": true
                     }
@@ -120,7 +120,7 @@
                     {
                         "type": "string",
                         "description": "Label ID",
-                        "name": "id",
+                        "name": "label_id",
                         "in": "path",
                         "required": true
                     },
@@ -144,7 +144,7 @@
                 }
             }
         },
-        "/labels/{id}/tasks": {
+        "/labels/{label_id}/tasks": {
             "get": {
                 "description": "Get tasks for label.",
                 "tags": [
@@ -162,7 +162,7 @@
                     {
                         "type": "string",
                         "description": "Label ID",
-                        "name": "id",
+                        "name": "label_id",
                         "in": "path",
                         "required": true
                     }
@@ -178,70 +178,6 @@
                         }
                     }
                 }
-            }
-        },
-        "/labels/{id}/tasks/{task_id}": {
-            "get": {
-                "description": "Add label to task.",
-                "tags": [
-                    "labels"
-                ],
-                "summary": "Add label to task.",
-                "parameters": [
-                    {
-                        "type": "string",
-                        "description": "Authorization",
-                        "name": "Authorization",
-                        "in": "header",
-                        "required": true
-                    },
-                    {
-                        "type": "string",
-                        "description": "Label ID",
-                        "name": "id",
-                        "in": "path",
-                        "required": true
-                    },
-                    {
-                        "type": "string",
-                        "description": "Task ID",
-                        "name": "task_id",
-                        "in": "path",
-                        "required": true
-                    }
-                ],
-                "responses": {}
-            },
-            "delete": {
-                "description": "Remove label from task.",
-                "tags": [
-                    "labels"
-                ],
-                "summary": "Remove label from task.",
-                "parameters": [
-                    {
-                        "type": "string",
-                        "description": "Authorization",
-                        "name": "Authorization",
-                        "in": "header",
-                        "required": true
-                    },
-                    {
-                        "type": "string",
-                        "description": "Label ID",
-                        "name": "id",
-                        "in": "path",
-                        "required": true
-                    },
-                    {
-                        "type": "string",
-                        "description": "Task ID",
-                        "name": "task_id",
-                        "in": "path",
-                        "required": true
-                    }
-                ],
-                "responses": {}
             }
         },
         "/login": {
@@ -315,7 +251,7 @@
                 }
             },
             "post": {
-                "description": "Create one task.",
+                "description": "Create one task, time format - 2018-12-10T13:49:51.141Z.",
                 "tags": [
                     "tasks"
                 ],
@@ -399,7 +335,7 @@
                 }
             }
         },
-        "/tasks/{id}": {
+        "/tasks/{task_id}": {
             "get": {
                 "description": "Get one task.",
                 "tags": [
@@ -417,7 +353,7 @@
                     {
                         "type": "string",
                         "description": "Task ID",
-                        "name": "id",
+                        "name": "task_id",
                         "in": "path",
                         "required": true
                     }
@@ -448,7 +384,7 @@
                     {
                         "type": "string",
                         "description": "Task ID",
-                        "name": "id",
+                        "name": "task_id",
                         "in": "path",
                         "required": true
                     },
@@ -481,59 +417,7 @@
                     {
                         "type": "string",
                         "description": "Task ID",
-                        "name": "id",
-                        "in": "path",
-                        "required": true
-                    }
-                ],
-                "responses": {}
-            }
-        },
-        "/tasks/{id}/complete": {
-            "post": {
-                "description": "Complete one task.",
-                "tags": [
-                    "tasks"
-                ],
-                "summary": "Complete task.",
-                "parameters": [
-                    {
-                        "type": "string",
-                        "description": "Authorization",
-                        "name": "Authorization",
-                        "in": "header",
-                        "required": true
-                    },
-                    {
-                        "type": "string",
-                        "description": "Task ID",
-                        "name": "id",
-                        "in": "path",
-                        "required": true
-                    }
-                ],
-                "responses": {}
-            }
-        },
-        "/tasks/{id}/uncomplete": {
-            "post": {
-                "description": "uncomplete one task.",
-                "tags": [
-                    "tasks"
-                ],
-                "summary": "uncomplete task.",
-                "parameters": [
-                    {
-                        "type": "string",
-                        "description": "Authorization",
-                        "name": "Authorization",
-                        "in": "header",
-                        "required": true
-                    },
-                    {
-                        "type": "string",
-                        "description": "Task ID",
-                        "name": "id",
+                        "name": "task_id",
                         "in": "path",
                         "required": true
                     }
@@ -543,7 +427,7 @@
         },
         "/tasks/{task_id}/comments": {
             "get": {
-                "description": "Get comments by task.",
+                "description": "Get comments for task by Task ID.",
                 "tags": [
                     "comments"
                 ],
@@ -577,7 +461,7 @@
                 }
             },
             "post": {
-                "description": "Create one comment.",
+                "description": "Create comment for task by Task ID.",
                 "tags": [
                     "comments"
                 ],
@@ -610,9 +494,9 @@
                 "responses": {}
             }
         },
-        "/tasks/{task_id}/comments/{id}": {
+        "/tasks/{task_id}/comments/{comment_id}": {
             "get": {
-                "description": "Get one comment.",
+                "description": "Get task comment by Task ID and Comment ID.",
                 "tags": [
                     "comments"
                 ],
@@ -635,7 +519,7 @@
                     {
                         "type": "string",
                         "description": "Comment ID",
-                        "name": "id",
+                        "name": "comment_id",
                         "in": "path",
                         "required": true
                     }
@@ -650,7 +534,7 @@
                 }
             },
             "put": {
-                "description": "Update one comment.",
+                "description": "Update task comment by Task ID and Comment ID.",
                 "tags": [
                     "comments"
                 ],
@@ -673,7 +557,7 @@
                     {
                         "type": "string",
                         "description": "Comment ID",
-                        "name": "id",
+                        "name": "comment_id",
                         "in": "path",
                         "required": true
                     },
@@ -690,11 +574,11 @@
                 "responses": {}
             },
             "delete": {
-                "description": "Delete one comment.",
+                "description": "Delete task comment by Task ID and Comment ID.",
                 "tags": [
                     "comments"
                 ],
-                "summary": "Delete task comment.",
+                "summary": "Delete comment from task.",
                 "parameters": [
                     {
                         "type": "string",
@@ -713,7 +597,125 @@
                     {
                         "type": "string",
                         "description": "Comment ID",
-                        "name": "id",
+                        "name": "comment_id",
+                        "in": "path",
+                        "required": true
+                    }
+                ],
+                "responses": {}
+            }
+        },
+        "/tasks/{task_id}/complete": {
+            "post": {
+                "description": "Complete one task.",
+                "tags": [
+                    "tasks"
+                ],
+                "summary": "Complete task.",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "Authorization",
+                        "name": "Authorization",
+                        "in": "header",
+                        "required": true
+                    },
+                    {
+                        "type": "string",
+                        "description": "Task ID",
+                        "name": "task_id",
+                        "in": "path",
+                        "required": true
+                    }
+                ],
+                "responses": {}
+            }
+        },
+        "/tasks/{task_id}/labels/{label_id}": {
+            "post": {
+                "description": "Add label to task.",
+                "tags": [
+                    "tasks"
+                ],
+                "summary": "Add label to task.",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "Authorization",
+                        "name": "Authorization",
+                        "in": "header",
+                        "required": true
+                    },
+                    {
+                        "type": "string",
+                        "description": "Task ID",
+                        "name": "task_id",
+                        "in": "path",
+                        "required": true
+                    },
+                    {
+                        "type": "string",
+                        "description": "Label ID",
+                        "name": "label_id",
+                        "in": "path",
+                        "required": true
+                    }
+                ],
+                "responses": {}
+            }
+        },
+        "/tasks/{task_id}/labels/{label_id}/": {
+            "delete": {
+                "description": "Remove label from task.",
+                "tags": [
+                    "tasks"
+                ],
+                "summary": "Remove label from task.",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "Authorization",
+                        "name": "Authorization",
+                        "in": "header",
+                        "required": true
+                    },
+                    {
+                        "type": "string",
+                        "description": "Task ID",
+                        "name": "task_id",
+                        "in": "path",
+                        "required": true
+                    },
+                    {
+                        "type": "string",
+                        "description": "Label ID",
+                        "name": "label_id",
+                        "in": "path",
+                        "required": true
+                    }
+                ],
+                "responses": {}
+            }
+        },
+        "/tasks/{task_id}/uncomplete": {
+            "post": {
+                "description": "uncomplete one task.",
+                "tags": [
+                    "tasks"
+                ],
+                "summary": "uncomplete task.",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "Authorization",
+                        "name": "Authorization",
+                        "in": "header",
+                        "required": true
+                    },
+                    {
+                        "type": "string",
+                        "description": "Task ID",
+                        "name": "task_id",
                         "in": "path",
                         "required": true
                     }
@@ -800,14 +802,14 @@
         "server.getCommentResponse": {
             "type": "object",
             "properties": {
+                "comment_id": {
+                    "type": "integer"
+                },
                 "created_at": {
                     "type": "string"
                 },
                 "description": {
                     "type": "string"
-                },
-                "id": {
-                    "type": "integer"
                 },
                 "task_id": {
                     "type": "integer"
@@ -826,7 +828,7 @@
                 "createdAt": {
                     "type": "string"
                 },
-                "id": {
+                "label_id": {
                     "type": "integer"
                 },
                 "title": {
@@ -849,7 +851,7 @@
                 "dueDate": {
                     "type": "string"
                 },
-                "id": {
+                "task_id": {
                     "type": "integer"
                 },
                 "title": {
